# Cpp-Coursework

./: CMakeLists.txt  FileManager.cpp  FileManager.h  PaymentManager.cpp  PaymentManager.h  Person.cpp  Person.h  README.md  StatementPrinter.cpp  StatementPrinter.h  main.cpp
